--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -188,7 +188,7 @@
 
                             </div>
                             <div class="col-md-2">
-                                <label for="ddlQuanity" class="col-form-label text-white">Quanity<span style="color:red">*</span></label>
+                                <label for="ddlQuanity" class="col-form-label text-white">Quantity<span style="color:red">*</span></label>
                                 <input type="text" id="txtQuanity" class="form-control form-control-sm" />
                                 <label for="ddlQuantity" class="control-label font-weight-bold text-white">
                                     Finish Good Qty:
