--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturnAdjust.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturnAdjust.cshtml
@@ -33,7 +33,7 @@
                 <td class="text-center">@item.QtyKG</td>
                 <td class="text-center hide">@item.MeasurementName</td>
                 <td class="text-center">@item.MeasurementSize</td>
-                <td class="text-center">@item.BoxQuanity</td>
+                <td class="text-center">@item.ReturnQuanity</td>
                 <td class="text-center">@item.ReturnPerUnitPrice</td>
                 <td class="text-center">@item.ReturnTotalPrice</td>
                 <td class="text-center">@item.ReturnDate</td>
