--- a/ERPWeb/Views/AgroConfiguration/_GetSalesReturnAdjustDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetSalesReturnAdjustDetails.cshtml
@@ -12,7 +12,7 @@
 
                 <th class="text-center" style="vertical-align:middle">Product Name</th>
                 <th class="text-center" style="vertical-align:middle">Measurment</th>
-                <th class="text-center" style="vertical-align:middle">R.QTY</th>
+                <th class="hide" style="vertical-align:middle">R.QTY</th>
                 <th class="text-center" style="vertical-align:middle">R.T.Quanity</th>
                 <th class="text-center" style="vertical-align:middle">R.PerUnitPrice</th>
                 <th class="text-center" style="vertical-align:middle">R.TotalPrice</th>
@@ -34,7 +34,7 @@
                         <td>@sl</td>
                         <td class="text-center">@item.FinishGoodProductName</td>
                         <td class="text-center">@item.MeasurementSize</td>
-                        <td class="text-center">@item.BoxQuanity</td>
+                        <td class="hide">@item.BoxQuanity</td>
                         <td class="text-center">@item.ReturnQuanity</td>
                         <td class="text-center">@item.ReturnPerUnitPrice</td>
                         <td class="text-center">@item.ReturnTotalPrice</td>
