--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -110,19 +110,19 @@
                                             @Html.DropDownList("ddlMeasurementName", (IEnumerable<SelectListItem>)ViewBag.ddlMeasurementName, "Select Measurement", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                             <span class="error hide req-ddlMeasurementName">MeasurementName Is Required</span>
                                         </div>
-                                        <div class="col-md-2">
+                                        <div class="col-md-2 hide">
                                             <input type="text" value="none" id="ddlReceipBatchCode" name="ddlReceipBatchCode" class="form-control form-control-sm" readonly />
                                             @*<label class="control-label" for="ddlReceipBatchCode">Recipe Code<span style="color:red">*</span></label>
             @Html.DropDownList("ddlReceipBatchCode", (IEnumerable<SelectListItem>)ViewBag.ddlReceipBatchCode, new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
             <span class="error hide req-ddlReceipBatchCode">Batch Code Is Required</span>*@
                                         </div>
-                                        <div class="col-md-2">
+                                        <div class="col-md-2 hide">
                                             <label for="qty"> Qty</label>
                                             <input type="text" id="qty" name="qty" class="form-control form-control-sm" readonly />
                                             <span class="error hide req-qty">Qty Is Required</span>
 
                                         </div>
-                                        <div class="col-md-2">
+                                        <div class="col-md-2 hide">
                                             <label for="targetQty" class="control-label"> Target Qty</label>
                                             <input type="number" id="targetQty" class="form-control form-control-sm" readonly />
                                             <span class="error hide req-targetQty">Target Qty Is Required</span>
@@ -133,11 +133,11 @@
                                             <span class="error hide req-FinishQty">Oty Over</span>
                                         </div>
 
-                                        <div class="col-md-1">
+                                        <div class="col-md-1 hide">
                                             <label>TotalProductQty</label>
                                             <input type="number" id="txtTotalProductQty" name="TotalProductQty" class="form-control form-control-sm" readonly />
                                         </div>
-                                        <div class="col-md-1">
+                                        <div class="col-md-1 hide">
                                             <label>TotalQty</label>
                                             <input type="number" id="txtTotalQty" name="TotalQty" class="form-control form-control-sm" readonly />
                                         </div>
@@ -460,7 +460,7 @@
             debugger;   
             e.preventDefault();
             var data = {};
-            var finishGoodProduction = { finishGoodProductId: ddlProduct.val(), quanity: TryParseInt(hdQuantity.val(), 0), targetQuantity: FinishQty.val(), receipeBatchCode: ddlReceipBatchCode.val() }
+            var finishGoodProduction = { finishGoodProductId: ddlProduct.val(), quanity: TryParseInt(hdQuantity.val(), 0), targetQuantity: FinishQty.val(), receipeBatchCode: ddlReceipBatchCode.val(), MeasurementId: TryParseInt(ddlMeasurementName.val(), 0), MFGQuanity: txtTotalQty.val() }
 
             var details = [];
             details.length = 0;
@@ -485,7 +485,6 @@
                                 $('.toastrDefaultSuccess').trigger('click');
                                 var ReceipeBatchCode = res.File;
                                 window.open('/AgroConfiguration/GetFinishGoodProductionReportSave?ReceipeBatchCode='+ReceipeBatchCode,'_blank');
-                                //window.open('/AgroConfiguration/AgroProductSalesReport?InvoiceNo=' + res.File, '_blank');
                                 setTimeout(function () {
                                     redirectPage('@Url.Action("GetProductFinishGoodList")');
                                 }, 500);
