--- a/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
@@ -230,7 +230,7 @@
                             <span class="error hide req-numCredit">Credit is Required</span>
                         </div>
 
-                        <div class="col-md-2">
+                        <div class="col-md-2 hide">
                             <label for="cash">Cash(%)</label>
                             <input type="number" id="numCashEdit" name="cash" class="form-control form-control-sm" />
                             <span class="error hide req-numCash">Credit is Required</span>
