--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
@@ -17,7 +17,7 @@
             <th>Discount%</th>
             <th class="hide">Total</th>
             <th>Remove(Yes/No)</th>
-            
+
         </tr>
     </thead>
     <tbody>
@@ -25,31 +25,65 @@
         {
             sl = sl + 1;
 
+            if (item.RT == 0)
+            {
+                <tr>
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
 
-        <tr>
-            <td class="text-center">@sl</td>
-            <td class="text-center">@item.FinishGoodProductName</td>
-            <td class="text-center">@item.MeasurementSize</td>
+                    <td class="text-center" style="width:15%">
+                        <input type="number" class="boxQuantity form-control form-control-sm " value="@item.Quanity" />
+                        <span class="error hide">Quantity must be less then or equal Current Stock</span>
+                    </td>
+                    <td class="text-center text-bold">@item.Price</td>
 
-            <td class="text-center" style="width:15%">
-                <input type="number" class="boxQuantity form-control form-control-sm " value="@item.BoxQuanity" />
-                <span class="error hide">Quantity must be less then or equal current Stock</span>
-            </td>
-            <td class="text-center text-bold">@item.Price</td>
-            @*<td class="text-center">@item.Discount</td>*@
-            <td class="text-center" style="width:15%">
-                <input type="number" class="discountTotal form-control form-control-sm " value="@item.Discount" />
+                    <td class="text-center" style="width:15%">
+                        <input type="number" class="discountTotal form-control form-control-sm " value="@item.Discount" />
 
-            </td>
-            <td class="hide">@item.ProductTotal</td>
-            <td class="text-center "><input type="checkbox"></td>
-            <td class="hide">@item.MQTY</td>
-            <td class="hide">@item.CurrentStock</td>
-            <td class="hide">@item.ProductSalesDetailsId</td>
-            <td class="hide">@item.TotalQty</td>
-            
+                    </td>
+                    <td class="hide">@item.ProductTotal</td>
+                    <td class="text-center "><input type="checkbox"></td>
+                    <td class="hide">@item.MQTY</td>
+                    <td class="hide">@item.CurrentStock</td>
+                    <td class="hide">@item.ProductSalesDetailsId</td>
+                    <td class="hide">@item.TotalQty</td>
 
-        </tr>
+
+                </tr>
+
+            }
+            else
+            {
+                <tr style="background-color: #008B8B;">
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
+
+                    <td class="text-center" style="width:15%">
+                        <input type="number" class="boxQuantity form-control form-control-sm bg-danger " value="@item.Quanity" readonly />
+                        <span class="error hide">Quantity must be less then or equal Current Stock</span>
+                    </td>
+                    <td class="text-center text-bold">@item.Price</td>
+
+                    <td class="text-center" style="width:15%">
+                        <input type="number" class="discountTotal form-control form-control-sm bg-danger" value="@item.Discount" readonly/>
+
+                    </td>
+                    <td class="hide">@item.ProductTotal</td>
+                    <td class="text-center "><input type="checkbox"></td>
+                    <td class="hide">@item.MQTY</td>
+                    <td class="hide">@item.CurrentStock</td>
+                    <td class="hide">@item.ProductSalesDetailsId</td>
+                    <td class="hide">@item.TotalQty</td>
+
+
+                </tr>
+
+            }
+
+
+
 
 
 
@@ -61,7 +95,7 @@
 
 
 
-    
+
 <script type="text/javascript">
 
     var boxQuantity = $(".boxQuantity");
@@ -70,18 +104,18 @@
 
 
     boxQuantity.on('change', function () {
-       
+
         debugger;
-        var currentBoxQty = $(this).val();
-         
-        var currentMQty = $(this).parent().parent().find("td:eq(8)").text();
+        var InsertQty = $(this).val();
 
-        var mstockqty = $(this).parent().parent().find("td:eq(9)").text();
+        var CurrentStockQty = $(this).parent().parent().find("td:eq(9)").text();
 
-        var TotalQty = currentBoxQty * currentMQty;
-        console.log(TotalQty);
+        // var mstockqty = $(this).parent().parent().find("td:eq(9)").text();
 
-        if (Number(TotalQty) <= Number(mstockqty)) {
+        //var TotalQty = currentBoxQty * currentMQty;
+        //console.log(TotalQty);
+        debugger
+        if (Number(CurrentStockQty) >= Number(InsertQty)) {
 
 
             $(this).parent().children("span").addClass("hide");
@@ -94,11 +128,11 @@
     });
 
 
-        
-        
 
 
 
-    </script>
-    
+
+
+</script>
+
 
