--- a/ERPWeb/Views/AgroConfiguration/_GetMoneyReceiptListDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMoneyReceiptListDetails.cshtml
@@ -12,7 +12,7 @@
             <th>#SL</th>
             <th>Invoice No</th>
             <th>Paid Amount</th>
-            <th>Commision(%)</th>
+            <th class="hide">Commision(%)</th>
             <th>Commision Amount</th>
         
             
@@ -30,7 +30,7 @@
                 <td class="text-center">@item.InvoiceNo</td>
                 @*<td class="text-center">@item.InvoiceDate.Value.ToString("dd-MMM-yyyy")</td>*@
                 <td class="text-center">@item.PaymentAmount</td>
-                <td class="text-center">@item.CommisionPercent</td>
+                <td class="hide">@item.CommisionPercent</td>
                 <td class="text-center">@item.CommisionAmount</td>
                 
 
