--- a/ERPWeb/Views/AgroConfiguration/_PaymentAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_PaymentAgroSalesProductList.cshtml
@@ -23,7 +23,7 @@
             <th style="vertical-align:middle">PaidAmount</th>
             <th style="vertical-align:middle">DueAmount</th>
             <th style="vertical-align:middle">Payment</th>
-            <th style="vertical-align:middle">Commision(%)</th>
+            <th style="vertical-align:middle">Commision(Tk)</th>
 
         </tr>
     </thead>
