--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
@@ -29,7 +29,7 @@
                         <td class="hide">@item.FinishGoodProductInfoId</td>
                         <td class="text-center">@item.FinishGoodProductionBatch</td>
                         <td class="text-center">@item.FinishGoodProductName</td>
-                        <td class="text-center">@item.Quanity</td>
+                        <td class="text-center">@item.TargetQuantity</td>
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
                         <td class="text-center">
 
