--- a/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
@@ -9,8 +9,8 @@
                 <tr class="text-center">
                     <th>Sl</th>
                     <th>Product Name </th>
-                    <th>Recipe BatchCode</th>
-                    <th>Product Details</th>
+                    <th>Measurment</th>
+                    <th class="hide">Product Details</th>
                     @*<th>Recipe Unit</th>*@
                     <th>Production Total</th>
                     <th>Sales Total</th>
@@ -33,8 +33,8 @@
                         <tr class="text-center">
                             <td>@sl</td>
                             <td>@item.FinishGoodProductName</td>
-                            <td>@item.ReceipeBatchCode</td>
-                            <td>@item.FGRQty@(" (" + @item.UnitName + " )")</td>
+                            <td>@item.MeasurementName</td>
+                            <td class="hide">@item.FGRQty@(" (" + @item.UnitName + " )")</td>
                             @*<td>@item.UnitName</td>*@
                             <td>@item.ProductionTotal</td>
                             <td>@item.SalesTotal</td>
